UpsertModal: fix css to set image size not too big, and height equal to the left, also responsive in mobile

--- a/src/pages/Song/SongUpsertModal.scss
+++ b/src/pages/Song/SongUpsertModal.scss
@@ -9,10 +9,11 @@
     color: #2199f9;
   }
   .title-artist {
-    width: 60%;
+    width: 100%;
+    margin-right: 4%;
   }
   .picture {
-    width: 30%;
+    height: 140px;
     position: relative;
     margin-top: 10px;
 
@@ -21,7 +22,7 @@
     }
 
     img {
-      width: 100%;
+      height: 100%;
       transition: 0.2s;
     }
 
